<resources>
    <string name="app_name">compass</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen_title">compass</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location_rationale_message">Without location permission compass indication will not be precise</string>
    <string name="grant_location_permission">Grant</string>
    <string name="destination_dialog_title">Destination coordinates</string>
    <string name="destination_dialog_message">Please enter destination coordinates</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="lat_lng_placeholder">%1$f, %2$f</string>
    <string name="error_latitude_not_valid">Latitude value must be between -90 and 90 degrees</string>
    <string name="error_longitude_not_valid">Longitude value must be between -180 and 180 degrees</string>
</resources>
